20051229
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2005/12/28 22:46:06
     [canohost.c channels.c clientloop.c]
     use 'break-in' for consistency; ok deraadt@ ok and input jmc@

20051229
 - (tim) [buildpkg.sh.in] grep for $SSHDUID instead of $SSHDGID on /etc/passwd

20051224
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2005/12/20 21:59:43
     [ssh.1]
     merge the sections on protocols 1 and 2 into one section on
     authentication;
     feedback djm dtucker
     ok deraadt markus dtucker
   - jmc@cvs.openbsd.org 2005/12/20 22:02:50
     [ssh.1]
     .Ss -> .Sh: subsections have not made this page more readable
   - jmc@cvs.openbsd.org 2005/12/20 22:09:41
     [ssh.1]
     move info on ssh return values and config files up into the main
     description;
   - jmc@cvs.openbsd.org 2005/12/21 11:48:16
     [ssh.1]
     -L and -R descriptions are now above, not below, ~C description;
   - jmc@cvs.openbsd.org 2005/12/21 11:57:25
     [ssh.1]
     options now described `above', rather than `later';
   - jmc@cvs.openbsd.org 2005/12/21 12:53:31
     [ssh.1]
     -Y does X11 forwarding too;
     ok markus
   - stevesk@cvs.openbsd.org 2005/12/21 22:44:26
     [sshd.8]
     clarify precedence of -p, Port, ListenAddress; ok and help jmc@
   - jmc@cvs.openbsd.org 2005/12/22 10:31:40
     [ssh_config.5]
     put the description of "UsePrivilegedPort" in the correct place;
   - jmc@cvs.openbsd.org 2005/12/22 11:23:42
     [ssh.1]
     expand the description of -w somewhat;
     help/ok reyk
   - jmc@cvs.openbsd.org 2005/12/23 14:55:53
     [ssh.1]
     - sync the description of -e w/ synopsis
     - simplify the description of -I
     - note that -I is only available if support compiled in, and that it
     isn't by default
     feedback/ok djm@
   - jmc@cvs.openbsd.org 2005/12/23 23:46:23
     [ssh.1]
     less mark up for -c;
   - djm@cvs.openbsd.org 2005/12/24 02:27:41
     [session.c sshd.c]